@@ -139,9 +139,13 @@ Code Outline:
   14-Jan-2016   P.L. Lim    Replace threshold formula with ERR. Cleaned up
                             threshold calculation function.
   26-Feb-2019   M.D. DeLaPena Check the IMAGETYP and adjust the dqpat and maskdq
+<<<<<<< HEAD
                             for BIAS and DARK images.  Bad pixels (BPIXTAB flag of 4) 
                             are ignored during the combination process for the 
                             SCI and ERR arrays (i.e. treat bad pixels as normal pixels).
+=======
+                            for BIAS and DARK images.
+>>>>>>> Final adjustments for combining bias and dark images
 */
 int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
                  char imgname[][CHAR_FNAME_LENGTH], int grp [], int nimgs,
@@ -205,7 +209,7 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
     float   sig2, psig2, rej2;  /* square of something */
     float   *exp2;              /* square of exptime per image*/
     float   scale, val, dum;
-    short   sval, crflag, nocr, nospill, dqpat, nobadpix;
+    short   sval, crflag, nocr, nospill, dqpat;
     short   maskdq;
 
     float   efacn, skyvaln;
@@ -257,34 +261,28 @@ int acsrej_loop (IODescPtr ipsci[], IODescPtr iperr[], IODescPtr ipdq[],
     /********************************** Begin Code ****************************/
     /* Initialization */
     crflag = par->crval;
-    dqpat = par->badinpdq;
     
     scale = par->scalense / 100.;
     nocr = ~crflag;
     nospill = ~SPILL;
 
-    /* Here nobadpix is using EXCLUDE just as a convenience as EXCLUDE is set to 4, but 
-       EXCLUDE is a local variable only.  The nobadpix is turning ON all bit settings 
-       except for the bad pixel value of 4 which would come from the bad pixel table.
-    */
-    nobadpix = ~EXCLUDE;
-
     numpix = dim_x * dim_y;
     readnoise_only = par->readnoise_only;
 
     /* If BIAS or DARK frames, do not use the EXCLUDE value pixels for maskdq  
-       per Git Issue #373.  
+       and dqpat per Git Issue #373.  
 
        Set up maskdq for detecting CR-affected pixels
     */
+    dqpat = par->badinpdq;
     upperCase(imagetyp);
     maskdq = OK | HIT;
     maskdq = maskdq | SPILL;
     if ( (strncmp(imagetyp, "BIAS", 4) != 0) && (strncmp(imagetyp, "DARK", 4) != 0) ) {
         maskdq = maskdq | EXCLUDE;
+    } else {
+        dqpat = dqpat & (~EXCLUDE);
     }
-sprintf (MsgText, "********** dqpat %d crflag %d niter %d maskdq %d", dqpat, crflag, niter, maskdq);
-trlmessage (MsgText);
 
     /* Define the buffer size for scrolling up the image. */
     width = (int) ceil(par->radius);  /* radius (pix) to propagate CR */
@@ -830,13 +828,6 @@ trlmessage (MsgText);
                                the output image array */
                             } else {
                                 sval = sval & nocr;
-                            }
-
-                            /* If BIAS or DARK frames, remove the BADPIXEL value 
-                               from the final output DQ array */
-                            if ( (strncmp(imagetyp, "BIAS", 4) == 0) || 
-                                 (strncmp(imagetyp, "DARK", 4) == 0) ) {
-                                 sval = sval & nobadpix;
                             }
 
                             /* Store the values arrived at so far in the
